--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
         <p>যেকোনো প্রয়োজনে যোগাযোগ করুন -- <a href="https://m.me/bhumi.porimap">https://m.me/bhumi.porimap</a></p>
       
     </div>
+  <footer>
+        <p>&copy; 2024 Sadiqullah. All rights reserved. <br>
+        Contact: <a href="mailto:quaddividerpro@gmail.com">quaddividerpro@gmail.com</a><br>
+        <a href="https://www.facebook.com/share/1nJeugknL4ZM3su2/?mibextid=A7sQZp">Facebook Group</a>
+        </p>
+  </footer>
 
 <script src="/js/download.js"></script>
 </body>
