--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 
 <body>
     <div id="container">
-          <p>App টির সঠিক ব্যবহার ইউটিউবে দেখে নিন :- <a href="https://www.youtube.com/playlist?list=PLVNxKgitdwIfTylQxu8IQvDube7NyidK0" style="color: #99b6ff">youtube.com/@QuadDividerPro <br></a> </p>
+          <p>App টির সঠিক ব্যবহার ইউটিউবে দেখে নিন : <a href="https://www.youtube.com/@QuadDividerPro" style="color: #99b6ff">youtube.com/@QuadDividerPro <br></a> </p>
+          <p>সকল সার্ভেয়ার দের WhatsApp Group : <a href="https://chat.whatsapp.com/HKFOKpCEFBADzahet0jUKG" style="color: #99b6ff">youtube.com/@QuadDividerPro <br></a> </p>
+      
      <div>
+       <br>
       <span><b>QuadDividerPro_8.0.1.apk 25 Jun 2024</b></span><br>
       <button id="downloadqd" style="
             margin-bottom: 10px;
@@ -28,7 +31,7 @@
             cursor: pointer;
             border-radius: 5px;">
         Download</button><br>
-
+<br>
          <!--
          
        <span>Release_6   <b>QdpCAD_v8.apk — 15/05/2024 </b></span><br>
@@ -95,7 +98,7 @@
   <footer>
         <p>&copy; 2024 Sadiqullah. All rights reserved. <br>
         Contact: <a href="mailto:quaddividerpro@gmail.com">quaddividerpro@gmail.com</a><br>
-        <a href="https://www.facebook.com/share/1nJeugknL4ZM3su2/?mibextid=A7sQZp">Facebook Group</a>
+        Facebook Group : <a href="https://www.facebook.com/share/1nJeugknL4ZM3su2/?mibextid=A7sQZp">Facebook Group</a>
         </p>
   </footer>
 
