--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div id="container">
           <p>App টির সঠিক ব্যবহার ইউটিউবে দেখে নিন : <a href="https://www.youtube.com/@QuadDividerPro" style="color: #99b6ff">youtube.com/@QuadDividerPro <br></a> </p>
-          <p>সকল সার্ভেয়ার দের WhatsApp Group : <a href="https://chat.whatsapp.com/HKFOKpCEFBADzahet0jUKG" style="color: #99b6ff">youtube.com/@QuadDividerPro <br></a> </p>
+          <p>সকল সার্ভেয়ার দের WhatsApp Group : <a href="https://chat.whatsapp.com/HKFOKpCEFBADzahet0jUKG" style="color: #99b6ff">WhatsApp<br></a> </p>
       
      <div>
        <br><br><br>
